--- a/app/src/main/res/layout/item_stream.xml
+++ b/app/src/main/res/layout/item_stream.xml
@@ -24,11 +24,13 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/tvTitle"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="13dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="4dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="0dp"
+        android:layout_marginEnd="0dp"
         android:layout_toEndOf="@+id/ivThumbnail"
-        android:text="John" />
+        android:text="John"
+        android:textColor="#535353"
+        android:textSize="12sp" />
 
     <TextView
         android:id="@+id/tvTitle"
@@ -36,32 +38,50 @@
         android:layout_height="67dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="14dp"
-        android:layout_marginTop="0dp"
-        android:layout_marginEnd="0dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="6dp"
         android:layout_toEndOf="@+id/ivThumbnail"
-        android:text="MyStream" />
+        android:ellipsize="end"
+        android:maxLines="3"
+        android:text="MyStream"
+        android:textColor="#FF8125" />
 
     <TextView
         android:id="@+id/tvViews"
-        android:layout_width="170dp"
+        android:layout_width="139dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tvPostTime"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="14dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginStart="39dp"
+        android:layout_marginTop="6dp"
         android:layout_marginEnd="0dp"
         android:layout_toEndOf="@+id/ivThumbnail"
-        android:text="1000" />
+        android:text="1000"
+        android:textColor="#FF8125" />
 
     <TextView
         android:id="@+id/tvPostTime"
         android:layout_width="166dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tvName"
+        android:layout_alignParentEnd="true"
         android:layout_marginStart="12dp"
         android:layout_marginTop="2dp"
+        android:layout_marginEnd="0dp"
         android:layout_toEndOf="@+id/ivThumbnail"
-        android:text="3m ago" />
+        android:text="3m ago"
+        android:textColor="#535353"
+        android:textSize="12sp" />
+
+    <ImageView
+        android:id="@+id/ivEye"
+        android:layout_width="26dp"
+        android:layout_height="19dp"
+        android:layout_below="@+id/tvPostTime"
+        android:layout_marginStart="11dp"
+        android:layout_marginTop="7dp"
+        android:layout_toEndOf="@+id/ivThumbnail"
+        app:srcCompat="@drawable/ic_eye" />
 
 </RelativeLayout>
