Edited button icon and color of text for both hint and search bar. Now button is an image icon and the search bar has orange hint colors and white colored text when typing.

--- a/app/src/main/res/layout/fragment_discovery.xml
+++ b/app/src/main/res/layout/fragment_discovery.xml
@@ -28,28 +28,33 @@
         android:spinnerMode="dropdown" />
 
     <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="176dp"
+        android:layout_width="220dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="0dp"
         android:layout_toEndOf="@+id/sDropdown"
-        android:background="#00FFFFFF">
+        android:background="#00FFFFFF"
+        android:textColorHint="#FF8125"
+        app:boxStrokeColor="#FF8125"
+        app:hintTextColor="#FF8125">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/etInput"
             android:layout_width="match_parent"
             android:layout_height="61dp"
             android:background="#00FFFFFF"
-            android:hint="Search" />
+            android:hint="Search"
+            android:textColor="#FFFFFF" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
-    <Button
+    <ImageButton
         android:id="@+id/btnSearch"
         android:layout_width="wrap_content"
         android:layout_height="61dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_marginStart="0dp"
-        android:text="Search" />
+        android:backgroundTint="#00FFFFFF"
+        android:src="@drawable/ic_search" />
 
 </RelativeLayout>
