--- a/app/src/main/res/layout/fragment_discovery.xml
+++ b/app/src/main/res/layout/fragment_discovery.xml
@@ -16,45 +16,66 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvStreams"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="60dp">
+        android:layout_height="300dp"
+
+        android:layout_below="@+id/sDropdown"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="0dp"
+        android:layout_marginBottom="10dp">
 
     </androidx.recyclerview.widget.RecyclerView>
 
     <Spinner
         android:id="@+id/sDropdown"
-        android:layout_width="136dp"
-        android:layout_height="61dp"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
+        android:layout_below="@+id/etInput"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="15dp"
         android:spinnerMode="dropdown" />
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="220dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="0dp"
-        android:layout_toEndOf="@+id/sDropdown"
-        android:background="#00FFFFFF"
-        android:textColorHint="#FF8125"
-        app:boxStrokeColor="#FF8125"
-        app:hintTextColor="#FF8125">
+    <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/etInput"
+        android:layout_width="410dp"
+        android:layout_height="60dp"
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/etInput"
-            android:layout_width="match_parent"
-            android:layout_height="61dp"
-            android:background="#00FFFFFF"
-            android:hint="Search"
-            android:textColor="#FFFFFF" />
-
-    </com.google.android.material.textfield.TextInputLayout>
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="5dp"
+        android:background="#222222"
+        android:hint="Search"
+        android:padding="5dp"
+        android:textColor="#FFFFFF"
+        android:textColorHint="#555555"
+        android:textStyle="italic" />
 
     <ImageButton
         android:id="@+id/btnSearch"
         android:layout_width="wrap_content"
-        android:layout_height="61dp"
+        android:layout_height="60dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="0dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="8dp"
         android:backgroundTint="#00FFFFFF"
         android:src="@drawable/ic_search" />
-
 </RelativeLayout>
+
+
+
+    <!--RECYCLERVIEW-->
+    <!--        android:layout_alignParentStart="true"-->
+    <!--        android:layout_alignParentEnd="true"-->
+    <!--        android:layout_centerVertical="true"-->
+
+    <!--IMAGEBUTTON-->
+    <!--    android:layout_marginStart="0dp"-->
+    <!--    android:layout_toEndOf="@+id/sDropdown"-->
+
+    <!--SPINNER-->
+    <!--    android:layout_alignParentTop="true"-->
+    <!--    android:layout_centerHorizontal="true"-->
