--- a/app/src/main/res/layout/fragment_discovery.xml
+++ b/app/src/main/res/layout/fragment_discovery.xml
@@ -16,13 +16,13 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvStreams"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="587dp"
 
         android:layout_below="@+id/sDropdown"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="0dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="15dp"
         android:layout_marginEnd="0dp"
         android:layout_marginBottom="10dp">
 
@@ -30,12 +30,13 @@
 
     <Spinner
         android:id="@+id/sDropdown"
-        android:layout_width="150dp"
-        android:layout_height="50dp"
+        android:layout_width="148dp"
+        android:layout_height="35dp"
         android:layout_below="@+id/etInput"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="15dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="9dp"
+        android:background="@drawable/bg_accent_button"
         android:spinnerMode="dropdown" />
 
     <com.google.android.material.textfield.TextInputEditText
@@ -63,6 +64,33 @@
         android:layout_marginEnd="8dp"
         android:backgroundTint="#00FFFFFF"
         android:src="@drawable/ic_search" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="141dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="75dp"
+        android:fontFamily="@font/luckiest_guy"
+        android:text="D I S C O V E R Y"
+        android:textColor="@color/accent"
+        android:textSize="20sp"
+        android:textStyle="bold|italic" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="105dp"
+        android:text="Discover new livestreams here."
+        android:textColor="@color/accent"
+        android:textSize="12sp"
+        android:textStyle="bold|italic" />
 </RelativeLayout>
 
 
