--- a/app/src/main/res/layout/item_stream.xml
+++ b/app/src/main/res/layout/item_stream.xml
@@ -28,8 +28,9 @@
         android:layout_marginTop="0dp"
         android:layout_marginEnd="0dp"
         android:layout_toEndOf="@+id/ivThumbnail"
+        android:fontFamily="@font/luckiest_guy"
         android:text="John"
-        android:textColor="#535353"
+        android:textColor="#828282"
         android:textSize="12sp" />
 
     <TextView
@@ -43,6 +44,7 @@
         android:layout_marginEnd="6dp"
         android:layout_toEndOf="@+id/ivThumbnail"
         android:ellipsize="end"
+        android:fontFamily="@font/luckiest_guy"
         android:maxLines="3"
         android:text="MyStream"
         android:textColor="#FF8125" />
@@ -57,6 +59,7 @@
         android:layout_marginTop="6dp"
         android:layout_marginEnd="0dp"
         android:layout_toEndOf="@+id/ivThumbnail"
+        android:fontFamily="@font/luckiest_guy"
         android:text="1000"
         android:textColor="#FF8125" />
 
@@ -70,8 +73,9 @@
         android:layout_marginTop="2dp"
         android:layout_marginEnd="0dp"
         android:layout_toEndOf="@+id/ivThumbnail"
+        android:fontFamily="@font/luckiest_guy"
         android:text="3m ago"
-        android:textColor="#535353"
+        android:textColor="#828282"
         android:textSize="12sp" />
 
     <ImageView
