--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -23,12 +23,13 @@
 
     <ImageView
         android:id="@+id/ivChannelImage"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="63dp"
+        android:layout_height="63dp"
         android:layout_below="@id/player"
-        tools:srcCompat="@tools:sample/avatars"
-        android:layout_marginStart="50dp"
-        android:layout_marginEnd="15dp"/>
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="15dp"
+        tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
         android:id="@+id/tvStreamTitle"
@@ -36,6 +37,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/player"
         android:layout_toEndOf="@id/ivChannelImage"
+        android:fontFamily="@font/luckiest_guy"
         android:textColor="#FF8125"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -47,7 +49,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/tvStreamTitle"
         android:layout_toEndOf="@id/ivChannelImage"
-        android:textColor="#787878"
+        android:fontFamily="@font/luckiest_guy"
+        android:textColor="#828282"
         android:textSize="16sp"
         tools:text="Channel Name" />
 
@@ -57,18 +60,21 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/tvChannelName"
         android:layout_toEndOf="@id/ivChannelImage"
-        android:textColor="#787878"
+        android:textColor="#828282"
         android:textSize="14sp"
         tools:text="Published At" />
 
     <TextView
         android:id="@+id/tvStreamDescription"
-        android:layout_width="305dp"
-        android:layout_height="wrap_content"
+        android:layout_width="254dp"
+        android:layout_height="270dp"
         android:layout_below="@id/tvStreamPublishedAt"
-        android:textColor="#787878"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="51dp"
+        android:layout_marginTop="17dp"
+        android:layout_marginEnd="35dp"
+        android:textColor="#828282"
         android:textSize="14sp"
-        tools:text="Description"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="5dp"/>
+        android:textStyle="italic"
+        tools:text="Description" />
 </RelativeLayout>
