--- a/app/src/main/res/layout/fragment_discovery.xml
+++ b/app/src/main/res/layout/fragment_discovery.xml
@@ -18,11 +18,11 @@
         android:layout_width="match_parent"
         android:layout_height="587dp"
 
-        android:layout_below="@+id/sDropdown"
+        android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="0dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="134dp"
         android:layout_marginEnd="0dp"
         android:layout_marginBottom="10dp">
 
@@ -32,9 +32,9 @@
         android:id="@+id/sDropdown"
         android:layout_width="148dp"
         android:layout_height="35dp"
-        android:layout_below="@+id/etInput"
+        android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="14dp"
         android:layout_marginEnd="9dp"
         android:background="@drawable/bg_accent_button"
         android:spinnerMode="dropdown" />
@@ -44,9 +44,10 @@
         android:layout_width="410dp"
         android:layout_height="60dp"
 
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="65dp"
         android:background="#222222"
         android:hint="Search"
         android:padding="5dp"
@@ -60,7 +61,7 @@
         android:layout_height="60dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="66dp"
         android:layout_marginEnd="8dp"
         android:backgroundTint="#00FFFFFF"
         android:src="@drawable/ic_search" />
@@ -71,8 +72,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="75dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="14dp"
         android:fontFamily="@font/luckiest_guy"
         android:text="D I S C O V E R Y"
         android:textColor="@color/accent"
@@ -85,8 +86,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="105dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="42dp"
         android:text="Discover new livestreams here."
         android:textColor="@color/accent"
         android:textSize="12sp"
