Finished creating user story where user can manage and remove channels from their profile page. Changes: fragment_profile.xml - Added Horizontal recyclerview for Channels user follows LoginActivity.java - Fixed issue where channels_followed did not contain an empty array. Now when a user signs up, the UserProfile is created with the empty array. ProfileFragment - Added code for updating ChannelAdapter, where it gathers the users followed channels and displays them in the recycler view on the profile page. UserProfile.java - Added getters and setters for the channels_followed array New files: item_channel.xml - Created .xml for new channel item Channel.java - Java file created for the Channel objects on Profile Page ChannelAdapter - Adapter for the Channel objects

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -10,6 +10,8 @@
         android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
         android:scaleType="centerCrop"
         app:srcCompat="@drawable/bg_cropped" />
 
@@ -65,4 +67,46 @@
         android:textColor="#FF8125"
         android:textSize="20sp"
         android:textStyle="bold" />
+
+    <FrameLayout
+        android:layout_width="389dp"
+        android:layout_height="345dp"
+        android:layout_below="@+id/tvUsername"
+        android:layout_marginTop="8dp">
+
+        <TextView
+            android:id="@+id/textView8"
+            android:layout_width="373dp"
+            android:layout_height="201dp"
+            android:layout_marginStart="13dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginBottom="0dp"
+            android:background="#333333" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvChannels"
+            android:layout_width="375dp"
+            android:layout_height="263dp"
+            android:layout_marginStart="13dp"
+            android:layout_marginTop="40dp"
+            android:layout_marginBottom="0dp"
+            android:background="#00333333"
+            android:scrollbars="horizontal">
+
+        </androidx.recyclerview.widget.RecyclerView>
+
+        <TextView
+            android:id="@+id/textView9"
+            android:layout_width="246dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="83dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="270dp"
+            android:fontFamily="@font/luckiest_guy"
+            android:text="M A N A G E  C H A N N E L S"
+            android:textColor="@color/accent"
+            android:textSize="20sp"
+            android:textStyle="bold|italic" />
+    </FrameLayout>
+
 </RelativeLayout>
