--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -77,4 +77,15 @@
         android:textSize="14sp"
         android:textStyle="italic"
         tools:text="Description" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="71dp"
+        android:layout_height="36dp"
+        android:layout_marginStart="31dp"
+        android:layout_marginTop="340dp"
+        android:layout_marginEnd="0dp"
+        android:background="@drawable/bg_accent_button"
+        android:text="FOLLOW"
+        android:textSize="12sp" />
 </RelativeLayout>
