--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -27,7 +27,7 @@
         android:layout_height="63dp"
         android:layout_below="@id/player"
         android:layout_alignParentStart="true"
-        android:layout_marginStart="30dp"
+        android:layout_marginStart="27dp"
         android:layout_marginEnd="15dp"
         tools:srcCompat="@tools:sample/avatars" />
 
@@ -79,11 +79,11 @@
         tools:text="Description" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btnFollow"
         android:layout_width="71dp"
         android:layout_height="36dp"
-        android:layout_marginStart="31dp"
-        android:layout_marginTop="340dp"
+        android:layout_marginStart="21dp"
+        android:layout_marginTop="350dp"
         android:layout_marginEnd="0dp"
         android:background="@drawable/bg_accent_button"
         android:text="FOLLOW"
