--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -68,7 +68,7 @@
         android:fontFamily="@font/luckiest_guy"
         android:text="User"
         android:textAllCaps="true"
-        android:textColor="#FF8125"
+        android:textColor="@color/accent"
         android:textSize="34sp"
         android:textStyle="bold" />
 
@@ -90,12 +90,12 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvChannels"
             android:layout_width="375dp"
-            android:layout_height="253dp"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
             android:layout_marginStart="13dp"
-            android:layout_marginTop="55dp"
+            android:layout_marginTop="85dp"
             android:layout_marginBottom="0dp"
             android:background="#00333333"
-            android:layout_centerVertical="true"
             android:scrollbars="horizontal">
 
         </androidx.recyclerview.widget.RecyclerView>
@@ -109,7 +109,7 @@
             android:layout_marginBottom="270dp"
             android:fontFamily="@font/luckiest_guy"
             android:text="M A N A G E  C H A N N E L S"
-            android:textColor="@color/accent"
+            android:textColor="#605C58"
             android:textSize="20sp"
             android:textStyle="bold|italic" />
     </FrameLayout>
