--- a/app/src/main/res/layout/fragment_discovery.xml
+++ b/app/src/main/res/layout/fragment_discovery.xml
@@ -13,20 +13,28 @@
         android:scaleType="centerCrop"
         android:src="@drawable/bg_cropped" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvStreams"
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swipeContainer"
         android:layout_width="match_parent"
-        android:layout_height="587dp"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/etInput"
+        android:layout_marginTop="0dp">
 
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="134dp"
-        android:layout_marginEnd="0dp"
-        android:layout_marginBottom="10dp">
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvStreams"
+            android:layout_width="match_parent"
+            android:layout_height="587dp"
 
-    </androidx.recyclerview.widget.RecyclerView>
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="134dp"
+            android:layout_marginEnd="0dp"
+            android:layout_marginBottom="10dp">
+
+        </androidx.recyclerview.widget.RecyclerView>
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
     <Spinner
         android:id="@+id/sDropdown"
