--- a/app/src/main/res/layout-land/fragment_profile.xml
+++ b/app/src/main/res/layout-land/fragment_profile.xml
@@ -79,10 +79,11 @@
     <FrameLayout
         android:layout_width="389dp"
         android:layout_height="345dp"
+        android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="29dp"
-        android:layout_marginTop="-265dp"
+        android:layout_marginTop="64dp"
         android:layout_marginEnd="127dp"
         android:layout_marginBottom="2dp"
         android:layout_toEndOf="@+id/ivProfilePic">
