--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -56,6 +56,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="50dp"
         android:backgroundTint="#111111"
+        android:fontFamily="@font/luckiest_guy"
         android:text="Login"
         android:textColor="#B24B00" />
 
@@ -67,6 +68,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="5dp"
         android:backgroundTint="#FF8125"
+        android:fontFamily="@font/luckiest_guy"
         android:text="Sign Up"
         android:textColor="#B24B00" />
 
@@ -77,6 +79,7 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="91dp"
+        android:fontFamily="@font/luckiest_guy"
         android:text="LIVE.LI"
         android:textColor="#FF8125"
         android:textSize="48sp"
@@ -90,6 +93,7 @@
         android:layout_alignParentTop="true"
         android:layout_marginStart="106dp"
         android:layout_marginTop="236dp"
+        android:fontFamily="@font/luckiest_guy"
         android:text="USERNAME"
         android:textColor="#FF8125" />
 
@@ -101,6 +105,7 @@
         android:layout_alignParentTop="true"
         android:layout_marginStart="106dp"
         android:layout_marginTop="315dp"
+        android:fontFamily="@font/luckiest_guy"
         android:text="PASSWORD"
         android:textColor="#FF8125" />
 
