--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -17,25 +17,24 @@
 
     <ImageButton
         android:id="@+id/ibExit"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="50dp"
+        android:layout_height="40dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_marginTop="15dp"
-        android:layout_marginEnd="15dp"
         android:background="@android:color/transparent"
-        app:srcCompat="@drawable/ic_outline_login_48" />
+        app:srcCompat="@drawable/ic_round_logout_48" />
 
     <TextView
         android:id="@+id/tvLogout"
-        android:layout_width="wrap_content"
+        android:layout_width="25dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="65dp"
-        android:layout_marginEnd="15dp"
         android:text="Log Out"
-        android:textColor="#FF8125" />
+        android:textAlignment="center"
+        android:textColor="#FF8125"
+        android:layout_marginEnd="16dp"
+        android:layout_below="@+id/ibExit"/>
 
     <ImageView
         android:id="@+id/ivProfilePic"
